# eolas-data

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: catalog-drift.yml  pre-release.yml  publish.yml  smoke.yml  test.yml
eolas_data/: __init__.py  _dataset_names.py  _regen_names.py  cdc.py  cli.py  client.py  console.py  dataset.py  exceptions.py  library.py  mcp_server.py  meta.py  rows.py  schedule.py  search.py
eolas_data/sync/: __init__.py  compact.py  manifest.py  sync.py
scripts/: check_client_contract.py  preflight.sh
tests/: test_as_arrow.py  test_cdc_roundtrip.py  test_changes_http.py  test_cli.py  test_cli_sync_compact.py  test_client.py  test_compact.py  test_date_filter.py  test_geometry_param.py  test_get_library.py  test_get_local.py  test_keyring.py  test_library.py  test_mcp_integration.py  test_mcp_protocol.py  test_mcp_server.py  test_meta.py  test_preview_dimensions.py  test_progress.py  test_resilience.py  test_rows.py  test_schedule.py  test_search.py  test_smoke_live.py  test_source_helpers.py  test_sync.py  test_sync_bulk.py  test_sync_changes.py  test_sync_integration.py
tests/fixtures/: source_helpers.json
