[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eolas-data"
version = "1.0.0"
description = "Python client for the eolas.fyi statistical data API (NZ, Australia, OECD)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Virtus Solutions", email = "phil@virtus-solutions.io" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]
keywords = ["statistics", "economics", "api", "new-zealand", "australia", "eolas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://eolas.fyi"
Documentation = "https://phildonovan.github.io/vswarehouse-docs/"
Repository = "https://github.com/phildonovan/eolas-data"
"Bug Tracker" = "https://github.com/phildonovan/eolas-data/issues"

[project.optional-dependencies]
dev = ["pytest", "responses", "pandas", "geopandas>=0.14", "shapely>=2.0"]
polars = ["polars>=0.20"]
plot = ["matplotlib>=3.5"]
geo = ["geopandas>=0.14", "shapely>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["eolas_data"]
