[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eolas-data"
version = "1.3.4"
description = "Python client for the eolas.fyi statistical data API (NZ, Australia, OECD)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Virtus Solutions", email = "phil@virtus-solutions.io" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "pyarrow>=24",
    "tqdm>=4.60",
    "rich>=13",
    # typer powers the `eolas` console script, which is always registered in
    # [project.scripts] — so it must be a base dep, not a [cli] extra, or a
    # bare `pip install eolas-data` leaves a broken `eolas` command.
    "typer>=0.12",
]
keywords = ["statistics", "economics", "api", "new-zealand", "australia", "eolas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://eolas.fyi"
Documentation = "https://docs.eolas.fyi/"
Repository = "https://github.com/phildonovan/eolas-data"
"Bug Tracker" = "https://github.com/phildonovan/eolas-data/issues"

[project.optional-dependencies]
dev = ["pytest", "responses", "pandas", "geopandas>=0.14", "shapely>=2.0", "typer>=0.12", "rich>=13"]
polars = ["polars>=0.20"]
geo = ["geopandas>=0.14", "shapely>=2.0"]
cli = ["typer>=0.12", "rich>=13"]
secure = ["keyring>=23.0"]

[project.scripts]
eolas = "eolas_data.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["eolas_data"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as requiring live API access (deselected by default)",
]
